var _application_2obj_2_debug_2net7_80_2_protos_2_user_8cs =
[
    [ "gRPCClient.UserData", "classg_r_p_c_client_1_1_user_data.html", "classg_r_p_c_client_1_1_user_data" ],
    [ "gRPCClient.UserParticipant", "classg_r_p_c_client_1_1_user_participant.html", "classg_r_p_c_client_1_1_user_participant" ],
    [ "gRPCClient.RequestCreateUser", "classg_r_p_c_client_1_1_request_create_user.html", "classg_r_p_c_client_1_1_request_create_user" ],
    [ "gRPCClient.ResponseCreateUser", "classg_r_p_c_client_1_1_response_create_user.html", "classg_r_p_c_client_1_1_response_create_user" ],
    [ "gRPCClient.RequestDeleteUser", "classg_r_p_c_client_1_1_request_delete_user.html", "classg_r_p_c_client_1_1_request_delete_user" ],
    [ "gRPCClient.ResponseDeleteUser", "classg_r_p_c_client_1_1_response_delete_user.html", "classg_r_p_c_client_1_1_response_delete_user" ],
    [ "gRPCClient.ResponseUserGetAllUsers", "classg_r_p_c_client_1_1_response_user_get_all_users.html", "classg_r_p_c_client_1_1_response_user_get_all_users" ],
    [ "gRPCClient.RequestUserGetByUsername", "classg_r_p_c_client_1_1_request_user_get_by_username.html", "classg_r_p_c_client_1_1_request_user_get_by_username" ],
    [ "gRPCClient.ResponseUserGetByUsername", "classg_r_p_c_client_1_1_response_user_get_by_username.html", "classg_r_p_c_client_1_1_response_user_get_by_username" ],
    [ "pb", "_application_2obj_2_debug_2net7_80_2_protos_2_user_8cs.html#a3a8b1403f9034aa88aad1ce2c733db60", null ],
    [ "pbc", "_application_2obj_2_debug_2net7_80_2_protos_2_user_8cs.html#acf353ca81053b715ef0a189df5a75499", null ],
    [ "pbr", "_application_2obj_2_debug_2net7_80_2_protos_2_user_8cs.html#a4c9bca18934bf8b310b9d65812404c69", null ],
    [ "scg", "_application_2obj_2_debug_2net7_80_2_protos_2_user_8cs.html#a6de48d7be2d1c733071a3f897657ee05", null ]
];