var searchData=
[
  ['result_0',['result',['../classg_r_p_c_client_1_1_response_update_class_participants.html#a2f8ff84210ac65ddd7117f593cbe898d',1,'gRPCClient.ResponseUpdateClassParticipants.Result'],['../classg_r_p_c_client_1_1_response_delete_user.html#a900687b7297580415a8a456fda942808',1,'gRPCClient.ResponseDeleteUser.Result']]],
  ['role_1',['role',['../classg_r_p_c_client_1_1_request_get_class_participants.html#af4576284739f14cbd4f2ad0fb190c038',1,'gRPCClient.RequestGetClassParticipants.Role'],['../classg_r_p_c_client_1_1_user_data.html#a0be0d72a2fcdac4aaa7a1746cc3e2963',1,'gRPCClient.UserData.Role'],['../classg_r_p_c_client_1_1_user_participant.html#a581c5d3b161437d10c3ed0bab21ab796',1,'gRPCClient.UserParticipant.Role'],['../class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_participants_d_t_o.html#a6b23f1b3ab18b01421f75105f029c5ee',1,'Domain.DTOs.ClassDTO.SearchClassParticipantsDTO.Role'],['../class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_creation_d_t_o.html#a485eda457055bb022b50ee45691c256e',1,'Domain.DTOs.UserDTO.UserCreationDTO.Role'],['../class_domain_1_1_models_1_1_user.html#ace984a39bb1df1b801241a7e4f5e4613',1,'Domain.Models.User.Role']]],
  ['room_2',['room',['../classg_r_p_c_client_1_1_class_data.html#a13572f59581250bc37f291c6c2eb831a',1,'gRPCClient.ClassData.Room'],['../classg_r_p_c_client_1_1_class_entity_creation.html#aff7323ad1a289e2c8944e8d2928015df',1,'gRPCClient.ClassEntityCreation.Room'],['../class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_creation_d_t_o.html#a219ec29ab7231306088c0ba749869ab0',1,'Domain.DTOs.ClassDTO.ClassCreationDTO.Room'],['../class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_update_d_t_o.html#aca65a312871c29823629b50c6659d908',1,'Domain.DTOs.ClassDTO.ClassUpdateDTO.Room'],['../class_domain_1_1_models_1_1_class_entity.html#a85dc8f076711aa0a599be35bd248039a',1,'Domain.Models.ClassEntity.Room']]]
];
