var searchData=
[
  ['resultfieldnumber_0',['resultfieldnumber',['../classg_r_p_c_client_1_1_response_update_class_participants.html#abf2084cc2b82b02c3e67ced147395501',1,'gRPCClient.ResponseUpdateClassParticipants.ResultFieldNumber'],['../classg_r_p_c_client_1_1_response_delete_user.html#a61a0bfb70b40aaf9bd75cf3b06d24db8',1,'gRPCClient.ResponseDeleteUser.ResultFieldNumber']]],
  ['rolefieldnumber_1',['rolefieldnumber',['../classg_r_p_c_client_1_1_request_get_class_participants.html#a82e13d642518724357d3d1f90f37cd45',1,'gRPCClient.RequestGetClassParticipants.RoleFieldNumber'],['../classg_r_p_c_client_1_1_user_data.html#adf027f5a287422556a6a71359d4f43cf',1,'gRPCClient.UserData.RoleFieldNumber'],['../classg_r_p_c_client_1_1_user_participant.html#adbeca5c6a850e9db69b2f5eb5e83856a',1,'gRPCClient.UserParticipant.RoleFieldNumber']]],
  ['roomfieldnumber_2',['roomfieldnumber',['../classg_r_p_c_client_1_1_class_data.html#a79e8e80c4712285752c202a8c3468064',1,'gRPCClient.ClassData.RoomFieldNumber'],['../classg_r_p_c_client_1_1_class_entity_creation.html#ab426cb03b39dfff239ded055c3951f15',1,'gRPCClient.ClassEntityCreation.RoomFieldNumber']]]
];
